fix(aifly): Text overflows container in guidance editor when scrolled (#10396)

--- a/apps/helpdesk/src/assets/css/new/components/rich-field.less
+++ b/apps/helpdesk/src/assets/css/new/components/rich-field.less
@@ -16,6 +16,7 @@
     border: 1px solid var(--neutral-grey-2); // legacy
     border-radius: 3px;
     position: relative;
+    z-index: 0;
 
     .editor-wrapper {
         margin: 3px 3px 26px 3px;
